
ChangeLog
 [ + added, - removed, * changed ]
 + 14Jun2017 Added instrumentation support for OpenMP taskloop and ordered directives
 + 12May2017 Added compatibility with new events in CUPTI 5 for stream creation
 * 10May2017 Upgraded pyextrae support for Python 3 and added submodule for CUDA tracing
 + 02May2017 Adds intrumentation for kmpc dynamic memory routines
 * 27Apr2017 Extrae_get_version API call now relies on the configure.ac value instead of using a separate include file
 * 26Apr2017 Initializes a different PEBS fd for every thread
 * 26Apr2017 Don't exit when the binary is linked against multiple OpenMP runtimes
 * 24Apr2017 Applied patch to emit a different event for the allocation id events
 * 20Apr2017 Fixes typo in the convenience library for Intel KMPC wrappers
 * 12Apr2017 Fixes CUDA tracing when using CUPTI
 * 12Apr2017 Fixed missing dependency with librt in clocks module
 * 11Apr2017 Changed PEBS initialization to activate in all the threads
 * 04Apr2017 Unifies GNU OpenMP APIs in a single library
 * 23Mar2017 Added missing initialization of control variables to keep track when we're in instrumentation or sampling that prevented PEBS sampling to trigger
 * 22Mar2017 Fixed configure checks for Java instrumentation support
 * 15Mar2017 pyextrae no longer requires a list of functions to instrument to activate the tracing
 * 03Mar2017 Fixed missing python scripts after make install
 * 14Feb2017 Fixed conflict between sampling and I/O tracing where we would capture I/O calls inside the sampling handler
 * 13Feb2017 Fixed critical bug in __kmpc_fork_call due to the use of the non-reentrant par_func variable to store the user task pointer 
 * 13Feb2017 Upgraded Dyninst compabitility to series 9.x 
 * 31Jan2017 Fixes bug in libdwarf detection macro
 * 12Jan2017 Fixes shared-libraries tests being compiled during 'make' instead
 of during 'make check'
 + 28Dec2016 Add instrumentation support for sched_yield syscall and others